@@ -5,7 +5,7 @@ ENV_CROSS_COMPILE:=$(CROSS_COMPILE)
 
 VERSION = 1
 PATCHLEVEL = 2
-SUBLEVEL = 6
+SUBLEVEL = 7
 #EXTRAVERSION = -rc3
 #NAME=Zonked Quokka
 
